--- a/ideas_loyiso-1/employee.html
+++ b/ideas_loyiso-1/employee.html
@@ -14,7 +14,7 @@
     <aside class="sidebar">
         <h2 class="logo">MobiTech Database</h2>
         <nav>
-            <a href="index.html" class="active">Dashboard</a>
+            <a href="employee.html" class="active">Dashboard</a>
             <a href="attendance.html">Attendance</a>
             <a href="payroll.html">Payroll</a>
             <a href="timeoff.html">Time Off</a>
@@ -51,6 +51,6 @@
 
 </div>
 
-<script src="script.js"></script>
+<script src="employee.js"></script>
 </body>
 </html>
