--- a/ideas_loyiso-1/profile.html
+++ b/ideas_loyiso-1/profile.html
@@ -85,7 +85,7 @@
   <aside class="sidebar">
     <h2 class="logo">MobiTech Database</h2>
     <nav>
-      <a href="index.html">Dashboard</a>
+      <a href="employee.html">Dashboard</a>
       <a href="attendance.html">Attendance</a>
       <a href="payroll.html">Payroll</a>
       <a href="timeoff.html">Time Off</a>
