--- a/ideas_loyiso-1/attendance.html
+++ b/ideas_loyiso-1/attendance.html
@@ -14,7 +14,7 @@
     <aside class="sidebar">
         <h2 class="logo">MobiTech Database</h2>
         <nav>
-            <a href="index.html">Dashboard</a>
+            <a href="employee.html">Dashboard</a>
             <a href="attendance.html" class="active">Attendance</a>
             <a href="payroll.html">Payroll</a>
             <a href="timeoff.html">Time Off</a>
