--- a/ideas_loyiso-1/profile.html
+++ b/ideas_loyiso-1/profile.html
@@ -83,7 +83,7 @@
 
   <!-- Sidebar -->
   <aside class="sidebar">
-    <h2 class="logo">MobiTech Database</h2>
+    <div class="logo"><img src="ModernTech_Solutions_Logo.png" alt=""></div>
     <nav>
       <a href="employee.html">Dashboard</a>
       <a href="attendance.html">Attendance</a>
@@ -96,10 +96,11 @@
   <!-- Main -->
   <main class="content">
     <header class="topbar">
-      <input id="searchProfile" type="text" placeholder="Filter names..." />
+      <input id="searchProfile" class="search" type="text" placeholder="Filter names..." />
       <div class="profile">HR Admin</div>
     </header>
 
+    <div class="line"></div>
     <h1>Employee Profile</h1>
 
     <div class="select-row">
