--- a/ideas_loyiso-1/timeoff.html
+++ b/ideas_loyiso-1/timeoff.html
@@ -12,9 +12,9 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <h2 class="logo">MobiTech Database</h2>
+        <div class="logo"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt=""></div>
         <nav>
-            <a href="index.html">Dashboard</a>
+            <a href="employee.html">Dashboard</a>
             <a href="attendance.html">Attendance</a>
             <a href="payroll.html">Payroll</a>
             <a href="timeoff.html" class="active">Time Off</a>
@@ -26,11 +26,12 @@
     <main class="content">
 
         <header class="topbar">
-            <input type="text" id="searchRequests" placeholder="Search requests by name...">
-            <div class="profile">HR Admin</div>
+            <input type="text" class="search" id="searchRequests" placeholder="Search requests by name...">
+            <div class="profile">Overview</div>
         </header>
 
-        <h1>Time Off Requests</h1>
+        <div class="line"></div>
+        <h2>Leave Forms</h2>
 
         <!-- Request Form -->
         <div class="table-wrapper" style="margin-bottom: 25px;">
