--- a/ideas_loyiso-1/attendance.html
+++ b/ideas_loyiso-1/attendance.html
@@ -12,7 +12,7 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <h2 class="logo">MobiTech Database</h2>
+        <div class="logo"><img src="ModernTech_Solutions_Logo.png" alt=""></div>
         <nav>
             <a href="employee.html">Dashboard</a>
             <a href="attendance.html" class="active">Attendance</a>
@@ -26,11 +26,12 @@
     <main class="content">
 
         <header class="topbar">
-            <input type="text" id="searchAttendance" placeholder="Search employee...">
-            <div class="profile">HR Admin</div>
+            <input type="text" id="searchAttendance" class="search" placeholder="Search employee...">
+            <div class="profile">Overview</div>
         </header>
 
-        <h1>Attendance & Leave Records</h1>
+        <div class="line"></div>
+        <h2>Attendance & Leave</h2>
 
         <div id="accordionContainer"></div>
 
