--- a/ideas_loyiso-1/payroll.html
+++ b/ideas_loyiso-1/payroll.html
@@ -12,7 +12,7 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <h2 class="logo">MobiTech Database</h2>
+        <div class="logo"><img src="ModernTech_Solutions_Logo.png" alt=""></div >
         <nav>
             <a href="employee.html">Dashboard</a>
             <a href="attendance.html">Attendance</a>
@@ -26,11 +26,12 @@
     <main class="content">
 
         <header class="topbar">
-            <input type="text" id="searchPayroll" placeholder="Search employee payroll...">
-            <div class="profile">HR Admin</div>
+            <input type="text" id="searchPayroll" class="search" placeholder="Search employee payroll...">
+            <div class="profile">Overview</div>
         </header>
 
-        <h1>Payroll Records</h1>
+        <div class="line"></div>
+        <h2>Payroll Estimator</h2>
 
         <div class="table-wrapper">
             <table>
@@ -39,7 +40,6 @@
                         <th>Employee</th>
                         <th>Hours Worked</th>
                         <th>Leave Deductions (hrs)</th>
-                        <th>Final Salary</th>
                     </tr>
                 </thead>
                 <tbody id="payrollTable">
