--- a/ideas_loyiso-1/payroll.html
+++ b/ideas_loyiso-1/payroll.html
@@ -40,13 +40,46 @@
                         <th>Employee</th>
                         <th>Hours Worked</th>
                         <th>Leave Deductions (hrs)</th>
+                        <th>Final Salary</th>
+                        <th>Payslip</th>
                     </tr>
                 </thead>
-                <tbody id="payrollTable">
-                    <!-- JS Inserts Rows -->
-                </tbody>
+                <tbody id="payrollTable"></tbody>
             </table>
         </div>
+
+        <!-- Payslip Modal -->
+        <div id="payslipModal" style="
+            display:none;
+            position:fixed;
+            top:0; left:0;
+            width:100%; height:100%;
+            background:rgba(0,0,0,0.5);
+            justify-content:center;
+            align-items:center;
+        ">
+            <div style="
+                background:white;
+                padding:25px;
+                width:380px;
+                border-radius:12px;
+                box-shadow:0 2px 10px rgba(0,0,0,0.3);
+            ">
+                <h2>Payslip</h2>
+                <div id="payslipContent"></div>
+
+                <button onclick="window.print()" 
+                    style="margin-top:15px;padding:10px 14px;border-radius:6px;border:none;background:#2763ff;color:white;cursor:pointer;">
+                    Print / Save as PDF
+                </button>
+
+                <button onclick="closePayslip()" 
+                    style="margin-top:10px;padding:10px 14px;border-radius:6px;border:1px solid #ccc;background:#fff;cursor:pointer;">
+                    Close
+                </button>
+            </div>
+        </div>
+
 
     </main>
 
