--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -3,29 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MobiTech Solution</title>
+    <title>ModernTech Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="Nav">
-    <a href="">Page 1</a>
-    <a href="">Page 2</a>
-    <a href="">Page 3</a>
-    <a href="">Page 4</a>
-</div>
+    <header class="Nav">
+        <div class="logo">ModernTech Solutions</div>
+        <nav>
+            <a href="#"> 1</a>
+            <a href="#"> 2</a>
+            <a href="#"> 3</a>
+            <a href="#"> 4</a>
+        </nav>
+    </header>
 
-<div class="Hero">
-    <h1>MobiTech Solution</h1>
-</div>
+    <section class="Hero">
+        <div class="hero-text">
+            <h1>Welcome to ModernTech Solutions</h1>
+            <p>Innovative tech solutions that empower your business.</p>
+            <a href="#" class="btn-primary">Get Started</a>
+        </div>
+    </section>
 
-<div class="Content">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente deserunt possimus perferendis magnam nemo. Dolorum quas illum reprehenderit rem vitae molestiae placeat cum corrupti iusto veritatis blanditiis, itaque fugiat obcaecati?
-    </p>
-</div>
+    <section class="Content">
+        <h2>Our Services</h2>
+        <div class="services">
+            <div class="service-card">
+                <h3>Background</h3>
+                <p>
+                The company specializes in creating custom software solutions for the healthcare
+                industry, with a focus on patient management systems and telemedicine platforms.
+                The company started with basic spreadsheets to manage employee information and
+                simple time tracking. Over time, they added more spreadsheets and ad-hoc solutions
+                to handle new requirements, resulting in a fragmented and inefficient system.</p>
+            </div>
+            
+            <div class="service-card">
+                <h3>About</h3>
+                <p>Our app is made for our very own employees here at ModernTech Solutions to keep them and ourselves up to date regarding their work, progress, Attendance, Payroll and time off.  </p>
+            </div>
+            <div class="service-card">
+                <h3>Benefits</h3>
+                <p>Save time on administrative work.
 
-<div class="Footer">
-    
-</div>
+                    Stay compliant and organized effortlessly.
+
+                    Get insights to improve employee engagement.
+
+                    Access HR tools anytime, anywhere.</p>
+            </div>
+            <div class="service-card">
+                <h3>Purpose</h3>
+                <p>Our app is designed to make it easier for employees to manage their work, track progress, attendance, payroll, and time off efficiently. its also easy to use </p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="Footer">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </footer>
 </body>
 </html>
