--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <header class="Nav">
-        <div class="logo">ModernTech Solutions</div>
+        <div class="Lets-Go">
+        <p style="font-size: 30px;">🌍</p>
+        <h2>ModernTech Solutions</h2>
+        </div>
         <nav>
-            <a href="#"> 1</a>
+           
+            <a href ="loginpage.html"> login</a>
+         <a href="#"> 1</a>
             <a href="#"> 2</a>
             <a href="#"> 3</a>
             <a href="#"> 4</a>
+
         </nav>
     </header>
 
@@ -21,7 +27,6 @@
         <div class="hero-text">
             <h1>Welcome to ModernTech Solutions</h1>
             <p>Innovative tech solutions that empower your business.</p>
-            <a href="#" class="btn-primary">Get Started</a>
         </div>
     </section>
 
@@ -60,7 +65,17 @@
     </section>
 
     <footer class="Footer">
+    <div class="footer-content">
         <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
-    </footer>
+        <p class="footer-info">
+            MobiTech HR helps businesses simplify employee management by centralizing data, 
+            automating payroll, and streamlining attendance and leave tracking. Designed to be 
+            fast, easy, and accessible for all HR staff.
+        </p>
+        
+    </div>
+</footer>
+
+
 </body>
 </html>
