--- a/ideas_loyiso-1/attendance.html
+++ b/ideas_loyiso-1/attendance.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance & Leave</title>
+    <title>Modern Manager</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="ModernTech_Solutions_Logo-S.png">
 </head>
 <body>
 
@@ -12,43 +13,29 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo"><img src="ModernTech_Solutions_Logo.png" alt=""></div>
+        <div class="logo"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt=""></div>
+        
         <nav>
-            <a href="employee.html">Dashboard</a>
-            <a href="attendance.html" class="active">Attendance</a>
-            <a href="payroll.html">Payroll</a>
-            <a href="timeoff.html">Time Off</a>
-            <a href="profile.html">Profile</a>
+            <a href="employee.html" data-icon="📃">Dashboard</a>
+            <a href="attendance.html" class="active" data-icon="👥">Attendance</a>
+            <a href="payroll.html" data-icon="💵"> Payroll</a>
+            <a href="timeoff.html" data-icon="🕑"> Time Off</a>
+            <a href="profile.html" data-icon="👤">Profile</a>
         </nav>
     </aside>
 
     <!-- Main Content -->
     <main class="content">
-
-        <header class="topbar">
-            <input type="text" id="searchAttendance" class="search" placeholder="Search employee...">
-            <div class="profile">Overview</div>
-        </header>
+            <header class="topbar">
+                <div><button id="state" onclick="State()"><span id="icon">🌗</span></button>
+                <input type="text" id="search" class="search" placeholder="Search employee...">
+                </div>
+                
+                <div class="profile">Overview</div>
+            </header>
 
         <div class="line"></div>
-        <div style="display:flex; align-items:center; gap:15px;">
-            <h2>Attendance & Leave Records</h2>
-
-            <button id="showAttendanceBtn" 
-                style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;cursor:pointer;">
-                Attendance Only
-            </button>
-
-            <button id="showLeaveBtn" 
-                style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;cursor:pointer;">
-                Leave Only
-            </button>
-
-            <button id="showBothBtn" 
-                style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;cursor:pointer;">
-                Show Both
-            </button>
-        </div>
+        <h2>Attendance & Leave Records</h2>
 
 
         <div id="accordionContainer"></div>
