--- a/ideas_loyiso-1/payroll.html
+++ b/ideas_loyiso-1/payroll.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payroll Overview</title>
+    <title>Modern Manager</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="ModernTech_Solutions_Logo-S.png">
 </head>
 <body>
 
@@ -12,23 +13,26 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo"><img src="ModernTech_Solutions_Logo.png" alt=""></div >
+        <div class="logo"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt=""></div>
+        
         <nav>
-            <a href="employee.html">Dashboard</a>
-            <a href="attendance.html">Attendance</a>
-            <a href="payroll.html" class="active">Payroll</a>
-            <a href="timeoff.html">Time Off</a>
-            <a href="profile.html">Profile</a>
+            <a href="employee.html"  data-icon="📃">Dashboard</a>
+            <a href="attendance.html" data-icon="👥">Attendance</a>
+            <a href="payroll.html" class="active" data-icon="💵"> Payroll</a>
+            <a href="timeoff.html" data-icon="🕑"> Time Off</a>
+            <a href="profile.html" data-icon="👤">Profile</a>
         </nav>
     </aside>
 
     <!-- Main Content -->
     <main class="content">
-
-        <header class="topbar">
-            <input type="text" id="searchPayroll" class="search" placeholder="Search employee payroll...">
-            <div class="profile">Overview</div>
-        </header>
+            <header class="topbar">
+                <div><button id="state" onclick="State()"><span id="icon">🌗</span></button>
+                <input type="text" id="search" class="search" placeholder="Search employee...">
+                </div>
+                
+                <div class="profile">Overview</div>
+            </header>
 
         <div class="line"></div>
         <h2>Payroll Estimator</h2>
@@ -39,8 +43,7 @@
                     <tr>
                         <th>Employee</th>
                         <th>Hours Worked</th>
-                        <th>Leave Deductions (hrs)</th>
-                        <th>Final Salary</th>
+                        <th>Leave Deductions (hrs)</th> 
                         <th>Payslip</th>
                     </tr>
                 </thead>
