--- a/Login_Page/Home.html
+++ b/Login_Page/Home.html
@@ -14,11 +14,8 @@
         </div>
         <nav>
            
-            <a href ="loginpage.html"> login</a>
-         <a href="#"> 1</a>
-            <a href="#"> 2</a>
-            <a href="#"> 3</a>
-            <a href="#"> 4</a>
+            <a href ="Login.html">Login</a>
+            <a href ="#About">About </a>
 
         </nav>
     </header>
@@ -30,7 +27,7 @@
         </div>
     </section>
 
-    <section class="Content">
+    <section class="Content" id="About">
         <h2>Our Services</h2>
         <div class="services">
             <div class="service-card">
@@ -67,11 +64,6 @@
     <footer class="Footer">
     <div class="footer-content">
         <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
-        <p class="footer-info">
-            MobiTech HR helps businesses simplify employee management by centralizing data, 
-            automating payroll, and streamlining attendance and leave tracking. Designed to be 
-            fast, easy, and accessible for all HR staff.
-        </p>
         
     </div>
 </footer>
