--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -5,17 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | HR App</title>
   <link rel="stylesheet" href="login.css">
-  <script defer src="login.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
 
   <div class="login-container">
     <div class="login-box">
 
+      <!-- Optional Logo -->
+      <div class="logo-circle">
+        <span>👤</span>
+      </div>
+
       <h1>Welcome Back</h1>
-      <p class="subtitle">Sign in to continue</p>
+      <p class="subtitle">Please sign in to continue</p>
 
       <form onsubmit="loginUser(event)">
+        
         <div class="input-group">
           <input type="text" id="username" required>
           <label>Username</label>
@@ -26,7 +32,16 @@
           <label>Password</label>
         </div>
 
-        <button class="btn" type="submit">Login</button>
+        <button class="btn-main" type="submit">Login</button>
+
+        <button class="btn-secondary" type="button" onclick="window.location.href='Home.html'">
+          Go Back
+        </button>
+
+        <p class="links">
+          <a href="ForgotPassword.html">Forgot Password?</a> |
+          <a href="SignUp.html">Create Account</a>
+        </p>
 
         <p class="error" id="errorMsg"></p>
       </form>
