--- a/ideas_loyiso-1/employee.html
+++ b/ideas_loyiso-1/employee.html
@@ -16,15 +16,15 @@
         <div class="logo"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt=""></div>
          
         <nav>
-            <a href="employee.html" class="active">📃 Dashboard</a>
-            <a href="attendance.html">👥 Attendance</a>
-            <a href="payroll.html">💵 Payroll</a>
-            <a href="timeoff.html">🕑 Time Off</a>
-            <a href="profile.html">👤 Profile</a>
+            <a href="employee.html" class="active" data-icon="📃">Dashboard</a>
+            <a href="attendance.html" data-icon="👥">Attendance</a>
+            <a href="payroll.html" data-icon="💵"> Payroll</a>
+            <a href="timeoff.html" data-icon="🕑"> Time Off</a>
+            <a href="profile.html" data-icon="👤">Profile</a>
         </nav>
     </aside>
 
-    <!-- Main content -->
+    <!-- Main content -->   
     <main class="content">
         <header class="topbar">
             <div><button id="state" onclick="State()"><span id="icon">🌗</span></button>
