--- a/ideas_loyiso-1/employee.html
+++ b/ideas_loyiso-1/employee.html
@@ -13,25 +13,25 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt=""></div>
+        <div class="logo toggle-btn"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt="" onclick="State()"></div>
          
         <nav>
-            <a href="employee.html" class="active" data-icon="📃">Dashboard</a>
-            <a href="attendance.html" data-icon="👥">Attendance</a>
-            <a href="payroll.html" data-icon="💵"> Payroll</a>
-            <a href="timeoff.html" data-icon="🕑"> Time Off</a>
-            <a href="profile.html" data-icon="👤">Profile</a>
+            <a href="employee.html" class="active">📃 Dashboard</a>
+            <a href="attendance.html">👥Attendance</a>
+            <a href="payroll.html">💵 Payroll</a>
+            <a href="timeoff.html">🕑 Time Off</a>
+            <a href="profile.html">👤 Profile</a>
         </nav>
     </aside>
 
     <!-- Main content -->   
     <main class="content">
         <header class="topbar">
-            <div><button id="state" onclick="State()"><span id="icon">🌗</span></button>
+            <div class="top-controls">
+            <button id="state" onclick="State()">◀️</button>
             <input type="text" id="search" class="search" placeholder="Search employee...">
+            <a href="attendance.html" id="state">🏛️</a>
             </div>
-            
-            <div class="profile">Overview</div>
         </header>
         <div class="line"></div>
         <h2>Employee Data</h2>
@@ -40,10 +40,10 @@
             <table>
                 <thead>
                 <tr>
-                    <th data-sort="name">Name ⬍</th>
-                    <th data-sort="position">Position ⬍</th>
-                    <th data-sort="department">Department ⬍</th>
-                    <th data-sort="salary">Salary ⬍</th>
+                    <th data-sort="name">Name</th>
+                    <th data-sort="position">Position</th>
+                    <th data-sort="department">Department</th>
+                    <th data-sort="salary">Salary</th>
                     <th>Contact</th>
                 </tr>
                 </thead>
