--- a/Management/profile.html
+++ b/Management/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Modern Manager</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="ModernTech_Solutions_Logo-S.png">
+    <link rel="icon" href="/Images/ModernTech_Solutions_Logo-S.png">
 </head>
 <body>
 
@@ -13,14 +13,14 @@
 
   <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo toggle-btn"><img id="logoImg" src="ModernTech_Solutions_Logo.png" alt="" onclick="State()"></div>
+        <div class="logo toggle-btn"><img id="logoImg" src="/Images/ModernTech_Solutions_Logo.png" alt="" onclick="State()"></div>
          
         <nav>
             <a href="employee.html" >📃 Dashboard</a>
             <a href="attendance.html">👥Attendance</a>
             <a href="payroll.html">💵 Payroll</a>
             <a href="timeoff.html">🕑 Time Off</a>
-            <a href="profile.html">👤 Profile</a>
+            <a href="profile.html" class="active">👤 Profile</a>
         </nav>
     </aside>
 
