Add it all together

--- a/Home_Page/Home.html
+++ b/Home_Page/Home.html
@@ -9,12 +9,12 @@
 <body>
     <header class="Nav">
         <div class="Lets-Go">
-        <p style="font-size: 30px;">🌍</p>
+        <img src="/Images/ModernTech_Solutions_Logo-S.png" alt="">
         <h2>ModernTech Solutions</h2>
         </div>
         <nav>
            
-            <a href ="Login.html">Login</a>
+            <a href ="/Login_Page/Login.html">Login</a>
             <a href ="#About">About </a>
 
         </nav>
