--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | HR App</title>
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -34,7 +34,7 @@
 
         <button class="btn-main" type="submit">Login</button>
 
-        <button class="btn-secondary" type="button" onclick="window.location.href='Home.html'">
+        <button class="btn-secondary" type="button" onclick="window.location.href='/Home_Page/Home.html'">
           Go Back
         </button>
 
