--- a/Management/profile.html
+++ b/Management/profile.html
@@ -30,7 +30,7 @@
             <div class="top-controls">
             <button id="state" onclick="State()">◀️</button>
             <input type="text" id="searchProfile" class="search" placeholder="Search employee...">
-            <a href="attendance.html" id="state">🏛️</a>
+            <a href="/Home_Page/Home.html" id="state">🏛️</a>
             </div>
       </header>
 
