Keep it Effecient

--- a/Management/attendance.html
+++ b/Management/attendance.html
@@ -38,10 +38,16 @@
         <h2>Attendance & Leave Records</h2>
 
 
-        <div id="accordionContainer"></div>
+        <div id="dropdownContainer"></div>
 
     </main>
 </div>
+
+<footer class="Footer">
+    <div class="footer-content">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </div>
+</footer>
 
 <script src="attendance.js"></script>
 
