--- a/Management/payroll.html
+++ b/Management/payroll.html
@@ -88,6 +88,12 @@
 
 </div>
 
+<footer class="Footer">
+    <div class="footer-content">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </div>
+</footer>
+
 <script src="payroll.js"></script>
 </body>
 </html>
