--- a/Management/profile.html
+++ b/Management/profile.html
@@ -52,6 +52,12 @@
   </main>
 </div>
 
+<footer class="Footer">
+    <div class="footer-content">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </div>
+</footer>
+
 <script src="profile.js"></script>
 </body>
 </html>
