--- a/Management/timeoff.html
+++ b/Management/timeoff.html
@@ -82,6 +82,12 @@
 
 </div>
 
+<footer class="Footer">
+    <div class="footer-content">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </div>
+</footer>
+
 <script src="timeoff.js"></script>
 </body>
 </html>
