--- a/Management/employee.html
+++ b/Management/employee.html
@@ -56,6 +56,12 @@
 
 </div>
 
+<footer class="Footer">
+    <div class="footer-content">
+        <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
+    </div>
+</footer>
+
 <script src="employee.js"></script>
 </body>
 </html>
