--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -39,8 +39,8 @@
         </button>
 
         <p class="links">
-          <a href="ForgotPassword.html">Forgot Password?</a> |
-          <a href="SignUp.html">Create Account</a>
+          <a href="/Home_Page/Home.html">Forgot Password?</a> |
+          <a href="/Home_Page/Home.html">Create Account</a>
         </p>
 
         <p class="error" id="errorMsg"></p>
