--- a/Management/employee.html
+++ b/Management/employee.html
@@ -34,7 +34,10 @@
             </div>
         </header>
         <div class="line"></div>
-        <h2>Employee Data</h2>
+        <div class="header-section">
+            <h2>Employee Data</h2>
+            <a href="/Home_Page/Home.html" id="state">➕</a>
+        </div>
 
         <div class="table-wrapper">
             <table>
