--- a/Management/payroll.html
+++ b/Management/payroll.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Manager</title>
+    <!-- payroll data and payslip -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/Images/ModernTech_Solutions_Logo-S.png">
 </head>
@@ -11,7 +12,7 @@
 
 <div class="layout">
 
-    <!-- Sidebar -->
+    <!-- Sidebar(simple) -->
     <aside class="sidebar">
         <div class="logo toggle-btn"><img id="logoImg" src="/Images/ModernTech_Solutions_Logo.png" alt="" onclick="State()"></div>
          
@@ -24,7 +25,7 @@
         </nav>
     </aside>
 
-    <!-- Main Content -->
+    <!-- Main content(Table) -->
     <main class="content">
         <header class="topbar">
             <div class="top-controls">
@@ -88,6 +89,7 @@
 
 </div>
 
+ <!-- a basic footer  -->
 <footer class="Footer">
     <div class="footer-content">
         <p>&copy; 2025 MobiTech Solution. All rights reserved.</p>
