added some commits

--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -12,7 +12,7 @@
   <div class="login-container">
     <div class="login-box">
 
-      <!-- Optional Logo -->
+     <!--Logo -->
       <div class="logo-circle">
         <span>👤</span>
       </div>
@@ -39,8 +39,8 @@
         </button>
 
         <p class="links">
-          <a href="/Home_Page/Home.html">Forgot Password?</a> |
-          <a href="/Home_Page/Home.html">Create Account</a>
+          <a href="ForgotPassword.html">Forgot Password?</a> |
+          <a href="SignUp.html">Create Account</a>
         </p>
 
         <p class="error" id="errorMsg"></p>
