--- a/Home_Page/Home.html
+++ b/Home_Page/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ModernTech Solutions</title>
+    <link rel="icon" href="/Images/ModernTech_Solutions_Logo-S.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
