--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | HR App</title>
+  <title>ModernTech Solutions</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="/Images/ModernTech_Solutions_Logo-S.png">
   <script defer src="script.js"></script>
 </head>
 <body>
