--- a/Login_Page/Login.html
+++ b/Login_Page/Login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ModernTech Solutions</title>
+  <title>Modern Manager</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/Images/ModernTech_Solutions_Logo-S.png">
   <script defer src="script.js"></script>
